🎨 style(app.css): change body scrollbar colors to improve contrast and readability 🐛 fix(app.css): change body overflow-y property to overlay to prevent scrollbar from affecting layout

--- a/ui/src/app.css
+++ b/ui/src/app.css
@@ -16,22 +16,22 @@
 
 body {
     margin: 0;
-    overflow-y: scroll;
+    overflow-y: overlay;
     overflow-x: hidden;
 }
 
 body::-webkit-scrollbar {
     width: 0.5em;
-    background-color: #f5f5f5;
+    background-color: #242424;
 }
 
 body::-webkit-scrollbar-thumb {
-	background-color: #1a1a1a;
+	background-color: #f5f5f5;
 }
 
 body::-webkit-scrollbar-track {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	background-color: #F5F5F5; 
+	background-color: #242424; 
 }
 
 button {
